# robovisor

./: .gitignore  .gitmodules  README.md  log6.txt
ROS-Object-Detection-2Dto3D-RealsenseD435/realsense_d435/include/: Algorithm_Objection_3D.h  Objection.h  Position_Transform.h  common.hpp
ROS-Object-Detection-2Dto3D-RealsenseD435/realsense_d435/src/: Algorithm_Objection_3D.cpp  Objection.cpp
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/logs/prototipo1/: build.cmake.001.log.stderr
catkin_ws/logs/rplidar_ros/: build.make.000.log.stderr
catkin_ws/src/prototipo1/: .CMakeLists.txt.swp  CMakeLists.txt
catkin_ws/src/prototipo1/bash/: .known.targets.swp  known.targets  known.targets.save  test.bash
catkin_ws/src/prototipo1/config/: base_local_planner_params.yaml  calibration.json  costmap_common_params.yaml  diff_drive_controller_params.yaml  diff_nav_drive_controller_params.yaml  (+5 more)
pico/: CMakeLists.txt  README.md
pico/encoder/: CMakeLists.txt  encoder.c
pico/i2c/: CMakeLists.txt  i2c.cpp
pico/include/: common.h  encoder.h  pwm.h
pico/main/: CMakeLists.txt  encoder.c  main.c  pwm.c
pico/pico-robovisor/: CMakeLists.txt
pico/pico-robovisor/include/: PID.h  common.h  core1.h  encoder.h  pwm.h
pico/pico-robovisor/main/: .encoder.c.swp  .main.c.swp  CMakeLists.txt  PID.c  core1.c  encoder.c  main.c  pwm.c
pico/pico-robovisor/test/: talker.py
pico/pio_rotary_encoder/: CMakeLists.txt  README.md  pio_rotary_encoder.pio
pico/pwm/: CMakeLists.txt  README.md
(+57 files in other folders)
